# from-scratch

./: pyproject.toml
models/: README.md  fc_MNIST.ipynb  pyproject.toml  pytorch_MNIST.ipynb
